# http-spi-bridge

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  default.nix  flake.nix  rust-toolchain.toml  shell.nix  test.json
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml  publish.yaml  update-flakes.yaml
src/: bridge.rs  http.rs  main.rs  spi.rs
