[package]
name = "http-spi-bridge"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.58"
axum = "0.5.12"
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
spidev = "0.5.1"
tokio = { version = "1.19.2", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
