[package]
name = "http-spi-bridge"
version = "0.1.0"
authors = ["Bernardo Meurer <bernardo@meurer.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.1", features = ["macros"] }
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
spidev = "0.5.1"
tokio = { version = "1.22.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
